今出来ているところまでコミット

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=spring-web-sample
+spring.thymeleaf.cache=false
+spring.messages.encoding=UTF-8
+spring.messages.basename=messages
+
 # DB
 spring.datasource.username=username
 spring.datasource.password=password
