--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'org.flywaydb:flyway-core'
 	implementation group: 'org.springframework', name: 'spring-jdbc', version: '6.1.11'
 	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '9.0.0'
 	implementation group: 'org.flywaydb', name: 'flyway-mysql', version: '10.16.0'
-	// implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
-	// implementation 'jakarta.validation:jakarta.validation-api'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
