--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.messages.basename=messages
 spring.datasource.username=username
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/spring_web_sample_db
+mybatis.configuration.map-underscore-to-camel-case=true
 
 #flyway
 spring.flyway.enabled=true
