--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=spring-web-sample
 spring.thymeleaf.cache=false
 spring.messages.encoding=UTF-8
 spring.messages.basename=messages
+spring.shell.interactive.enabled=true
 
 # DB
 spring.datasource.username=username
@@ -14,4 +15,3 @@ spring.flyway.enabled=true
 spring.flyway.user=username
 spring.flyway.password=password
 spring.flyway.url=${spring.datasource.url}
-spring.flyway.clean-disabled=false
