--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.flyway.enabled=true
 spring.flyway.user=username
 spring.flyway.password=password
 spring.flyway.url=${spring.datasource.url}
+
+#minio
+minio.url=http://localhost:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket-name=my-bucket
