--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 volumes:
   db_volume:
+  minio_data:
 
 services:
   db:
@@ -14,3 +15,16 @@ services:
       MYSQL_USER: username
       MYSQL_ROOT_PASSWORD: root
       TZ: Asia/Tokyo
+
+  minio:
+    image: minio/minio
+    container_name: minio
+    environment:
+      MINIO_ROOT_USER: minioadmin
+      MINIO_ROOT_PASSWORD: minioadmin
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+    command: server /data --console-address ":9001"
